--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
     <scope>test</scope>
 	</dependency>
 	
+	<dependency>
+    <groupId>net.bytebuddy</groupId>
+    <artifactId>byte-buddy</artifactId>
+    <version>1.7.9</version>
+	</dependency>
 	
   </dependencies>
 </project>
