--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -1,3 +1,4 @@
 driverPath=C:\\chromedriver.exe
 implicitlyWait=10
 url=http://www.shop.demoqa.com
+testDataResourcePath=src/test/resources/testDataResources/
