--- a/pom.xml
+++ b/pom.xml
@@ -96,5 +96,12 @@
     <version>1.7.9</version>
 	</dependency>
 	
+	<dependency>
+	<groupId>info.cukes</groupId>
+	<artifactId>cucumber-picocontainer</artifactId>
+	<version>1.2.5</version>
+	<scope>test</scope>
+	</dependency>
+	
   </dependencies>
 </project>
