--- a/pom.xml
+++ b/pom.xml
@@ -83,12 +83,6 @@
     <scope>test</scope>
 	</dependency>
 	
-	<dependency>
-    <groupId>info.cukes</groupId>
-    <artifactId>cucumber-junit</artifactId>
-    <version>1.2.5</version>
-    <scope>test</scope>
-	</dependency>
 	
 	<dependency>
     <groupId>net.bytebuddy</groupId>
@@ -104,4 +98,33 @@
 	</dependency>
 	
   </dependencies>
+  
+  <build>
+	    <plugins>
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <version>3.7.0</version>
+		        <configuration>
+		          <source>1.9</source>
+		          <target>1.9</target>
+		           <encoding>UTF-8</encoding>          
+		        </configuration>
+		      </plugin>	 
+		      
+		      <plugin>
+				<groupId>org.apache.maven.plugin</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+				<suiteXmlFiles>
+				<suiteXmlFile>src/test/resources/testng.xml
+				</suiteXmlFile>
+				</suiteXmlFiles>
+				</configuration>
+				</plugin>
+         		      		     
+      	</plugins>
+  	</build>
+  
 </project>
